// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Dudes: {{#dudes  }}{{>   dude}}{{/dudes}}

=====================================output=====================================
Dudes: {{#dudes}}{{>dude}}{{/dudes}}
================================================================================
`;

exports[`context.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Dudes: {{>dude dudes}}</p>
<p>Dudes: {{#dudes}}{{>dude name="foo"}}{{/dudes}}</p>
<p>Dudes: {{>dude "dudes"}}</p>

=====================================output=====================================
<p>Dudes: {{>dude dudes}}</p>
<p>Dudes: {{#dudes}}{{>dude name="foo"}}{{/dudes}}</p>
<p>Dudes: {{>dude "dudes"}}</p>
================================================================================
`;

exports[`dynamic.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Dudes: {{#dudes}}{{> (partial)}}{{/dudes}}

=====================================output=====================================
Dudes: {{#dudes}}{{> (partial) }}{{/dudes}}
================================================================================
`;

exports[`lookup.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{> (lookup . 'myVariable') }}

=====================================output=====================================
{{> (lookup . "myVariable") }}
================================================================================
`;

exports[`paths.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Dudes: {{> shared/dude}}</p>
<p>Dudes: {{> shared/dude.thing}}</p>
<p>Dudes: {{> 404}}</p>
<p>Dudes: {{> 404/asdf?.bar}}</p>
<p>Dudes: {{> '+404/asdf?.bar'}}</p>

=====================================output=====================================
<p>Dudes: {{>shared/dude}}</p>
<p>Dudes: {{>shared/dude.thing}}</p>
<p>Dudes: {{>404}}</p>
<p>Dudes: {{>404/asdf?.bar}}</p>
<p>Dudes: {{>"+404/asdf?.bar"}}</p>
================================================================================
`;
